--- a/pages/cartas_de_presentacion.css
+++ b/pages/cartas_de_presentacion.css
@@ -43,7 +43,7 @@
     font-weight: 600;
     border: none;
     cursor: pointer;
-    background: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
+    background: linear-gradient(-45deg, #2799f7 0%, #b30fff 100% );
     border-radius: 5px;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
   }
@@ -55,7 +55,7 @@
     bottom: 0;
     width: 100%;
     height: 5px;
-    background: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
+    background: linear-gradient(-45deg, #2799f7 0%, #b30fff 100% );
     z-index: -1;
     transition: all 0.5s cubic-bezier(0.23, 1, 0.320, 1);
   }
