cambio de color de menu

--- a/pages/menu.css
+++ b/pages/menu.css
@@ -9,12 +9,12 @@
     font-weight: 600;
     display: flex;
     align-items: center;
-    background: #040f16;
+    background: #2596ca;
     color: #f5f5f5;
   }
   
   .btn:hover {
-    box-shadow: 0 0 20px 0px #2e2e2e3a;
+    box-shadow: 0 0 20px 0px #2596ca;
   }
   
   .btn .icon {
