--- a/pages/estadisticas/home_estadisticas.css
+++ b/pages/estadisticas/home_estadisticas.css
@@ -1,89 +1,57 @@
-.cartaspresentacion{
-    text-align: center; 
-    padding-top: 20px;
-    margin-top: 20px; 
-    display: inline-block;
+/*estilos de los botones */
+.botonera{
+    text-align: center; /* Centra horizontalmente los elementos dentro del contenedor */
+    padding-top: 20px; /* Espacio superior para separar de la parte superior de la página */
 }
-.card {
+.animated-button {
     position: relative;
     display: inline-block;
-    align-items: center;
-    justify-content: center;
-    margin-top: 20px;
-    margin: 10px;
-    width: 320px;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-    padding: 32px;
-    overflow: hidden;
-    border-radius: 10px;
-    transition: all 0.5s cubic-bezier(0.23, 1, 0.320, 1);
-  }
-  
-  .content {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 20px;
-    color: #e8e8e8;
-    transition: all 0.5s cubic-bezier(0.23, 1, 0.320, 1);
-  }
-  
-  .content .heading {
-    font-weight: 700;
-    font-size: 32px;
-  }
-  
-  .content .para {
-    line-height: 1.5;
-  }
-  
-  .content .btn {
-    color: #e8e8e8;
-    text-decoration: none;
-    padding: 10px;
-    font-weight: 600;
+    padding: 12px 24px;
     border: none;
+    font-size: 16px;
+    background-color: inherit;
+    border-radius: 100px;
+    font-weight: 600;
+    color: #ffffff40;
+    box-shadow: 0 0 0 2px #ffffff20;
     cursor: pointer;
-    background: linear-gradient(-45deg, #2799f7 0%, #b30fff 100% );
-    border-radius: 5px;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+    transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
   }
   
-  .card::before {
-    content: "";
+  .animated-button span:last-child {
     position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 5px;
-    background: linear-gradient(-45deg, #2799f7 0%, #b30fff 100% );
-    z-index: -1;
-    transition: all 0.5s cubic-bezier(0.23, 1, 0.320, 1);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 20px;
+    height: 20px;
+    background-color: #00eeff;
+    border-radius: 50%;
+    opacity: 0;
+    transition: all 0.8s cubic-bezier(0.23, 1, 0.320, 1);
   }
   
-  .card:hover::before {
-    height: 100%;
+  .animated-button span:first-child {
+    position: relative;
+    z-index: 1;
   }
   
-  .card:hover {
-    box-shadow: none;
+  .animated-button:hover {
+    box-shadow: 0 0 0 5px #2195f360;
+    color: #ffffff;
   }
   
-  .card:hover .btn {
-    color: #212121;
-    background: #e8e8e8;
+  .animated-button:active {
+    scale: 0.95;
   }
   
-  .content .btn:hover {
-    outline: 2px solid #e8e8e8;
-    background: transparent;
-    color: #e8e8e8;
+  .animated-button:hover span:last-child {
+    width: 150px;
+    height: 150px;
+    opacity: 1;
   }
-  
-  .content .btn:active {
-    box-shadow: none;
-  }
-  
+  /* estilos de las frases que cambian*/
   .cardcambiante {
     font-size: 17px;
     font-weight: 400;
@@ -281,3 +249,10 @@
   .card4:hover .go-arrow {
     opacity: 1;
   }
+/* centra el texto que cambia */
+  .texto-cambiante{   
+    display: flex;
+    justify-content: center; /* Centrar horizontalmente */
+    align-items: center; /* Centrar verticalmente */
+    height: 50vh; /* Altura del viewport */
+}
