--- a/pages/cartas_de_presentacion.css
+++ b/pages/cartas_de_presentacion.css
@@ -4,6 +4,7 @@
     margin-top: 20px; 
     display: inline-block;
 }
+/*estilos de las cartas de presentacion*/
 .card {
     position: relative;
     display: inline-block;
@@ -18,6 +19,7 @@
     border-radius: 10px;
     transition: all 0.5s cubic-bezier(0.23, 1, 0.320, 1);
   }
+  /*desde este punto solo se agregan las fotos*/
   .f1 {
     background-image: url('formula-1-logo-0.png'); /* Ruta de la imagen de fondo */
     background-size: cover; /* Escalar la imagen para cubrir todo el contenedor */
@@ -64,6 +66,7 @@
     background-size: cover; /* Escalar la imagen para cubrir todo el contenedor */
     background-position: center; /* Posición de la imagen en el centro */
   }
+  /*hasta acá solo se modifican las fotos*/
   .content {
     display: flex;
     flex-direction: column;
@@ -128,7 +131,7 @@
   .content .btn:active {
     box-shadow: none;
   }
-  
+  /*estos son los estilos de la carte de los mensajes cambiantes*/
   .cardcambiante {
     font-size: 17px;
     font-weight: 400;
