--- a/pages/cartas_de_presentacion.css
+++ b/pages/cartas_de_presentacion.css
@@ -42,7 +42,7 @@
     background-position: center; /* Posición de la imagen en el centro */
   }
   .tenis{
-    background-image: url('valorant-logo-FAB2CA0E55-seeklogo.com.png'); /* Ruta de la imagen de fondo */
+    background-image: url('tenis-abecedario-kgNF--1248x698abc.jpg'); /* Ruta de la imagen de fondo */
     background-size: cover; /* Escalar la imagen para cubrir todo el contenedor */
     background-position: center; /* Posición de la imagen en el centro */
   }
