--- a/pages/deportes/f1/home_f1.css
+++ b/pages/deportes/f1/home_f1.css
@@ -12,8 +12,8 @@
     background-color: inherit;
     border-radius: 100px;
     font-weight: 600;
-    color: #ffffff40;
-    box-shadow: 0 0 0 2px #ffffff20;
+    color: #f5ebeb;
+    box-shadow: 0 0 0 2px #e21e1ea8;
     cursor: pointer;
     overflow: hidden;
     transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
@@ -26,7 +26,7 @@
     transform: translate(-50%, -50%);
     width: 20px;
     height: 20px;
-    background-color: #00eeff;
+    background-color: #e21e1ef8;
     border-radius: 50%;
     opacity: 0;
     transition: all 0.8s cubic-bezier(0.23, 1, 0.320, 1);
@@ -38,7 +38,7 @@
   }
   
   .animated-button:hover {
-    box-shadow: 0 0 0 5px #2195f360;
+    box-shadow: 0 0 0 5px #f11a1ad7;
     color: #ffffff;
   }
   
@@ -53,6 +53,8 @@
   }
   /* estilos de las frases que cambian*/
   .cardcambiante {
+    margin-bottom: 20px;
+    margin-top: 20px;
     font-size: 17px;
     font-weight: 400;
     line-height: 20px;
@@ -249,24 +251,19 @@
   .card4:hover .go-arrow {
     opacity: 1;
   }
-/* centra el texto que cambia */
-  .texto-cambiante{   
-    display: flex;
-    justify-content: center; /* Centrar horizontalmente */
-    align-items: center; /* Centrar verticalmente */
-    height: 50vh; /* Altura del viewport */
-}
+
 /*estilos de las estadisticas*/
 .contprincipal {
   /*padding-top: 20px;*/
+  margin-block: 20px;
   margin-bottom: 20px;
   margin-top: 20px;
   margin: 20px;
   display: flex;
   flex-direction: column;
-  align-items: center; /* Centra horizontalmente */
-  justify-content: center; /* Centra verticalmente */
-  height: 100vh; /* Esto es opcional, pero hace que el div ocupe toda la altura de la ventana */
+  /*align-items: center; /* Centra horizontalmente */
+  /* justify-content: center; Centra verticalmente */
+  height: 50vh; /* Esto es opcional, pero hace que el div ocupe toda la altura de la ventana */
 }
 /*estilos de textos referenciales*/
 .referenciales{
@@ -301,12 +298,20 @@
 
 /*contenedor de los textos informativos*/
 .textosinfo{
+  margin: 20px;
   display: block;
   align-items: center;
   color:#ffffff; 
   font-family: Bebas Neue;
   font-size: 18px;
 }
+/*estilos de info tabla
+.iframepuntos{
+  margin: 20px;
+  width: 960px;
+  height: 500px;
+}
+*/
 /*estilos de botones referenciales*/
 /* === removing default button style ===*/
 .button {
@@ -349,4 +354,12 @@
 .button:hover .hover-text {
   width: 100%;
   filter: drop-shadow(0 0 23px var(--animation-color))
+}
+/* centra el texto que cambia */
+.texto-cambiante{
+  margin-top: 20px;   
+  display: flex;
+  justify-content: center; /* Centrar horizontalmente */
+  align-items: center; /* Centrar verticalmente */
+  height: 50vh; /* Altura del viewport */
 }
