--- a/pages/deportes/f1/tabla de puntos/tabla_de_puntos.css
+++ b/pages/deportes/f1/tabla de puntos/tabla_de_puntos.css
@@ -1,4 +1,5 @@
 .tabladepuntos{
+    margin-top: 40px;
     color: beige;
     display: flex;
     justify-content: center; /* Centrar horizontalmente */
