--- a/pages/deportes/f1/tabla de puntos/tabla_de_puntos.css
+++ b/pages/deportes/f1/tabla de puntos/tabla_de_puntos.css
@@ -5,4 +5,5 @@
     justify-content: center; /* Centrar horizontalmente */
     /*align-items: center; /* Centrar verticalmente */
     height: 50vh; /* Altura del viewport */
+    font-family: Bebas Neue;
 }
