--- a/pages/deportes/f1/home_f1.css
+++ b/pages/deportes/f1/home_f1.css
@@ -1,3 +1,4 @@
+
 /*estilos de los botones */
 .botonera{
     text-align: center; /* Centra horizontalmente los elementos dentro del contenedor */
@@ -267,6 +268,9 @@
 }
 /*estilos de iframe puntos*/
 .puntos{
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Centra horizontalmente */
   justify-content: center; /* Centrar horizontalmente */
 }
 /*estilos de textos referenciales*/
