--- a/pages/deportes/f1/pilotos/home_pilotos.css
+++ b/pages/deportes/f1/pilotos/home_pilotos.css
@@ -258,6 +258,26 @@
     margin-top: 20px; 
     display: inline-block;
 }
+/*buscador*/
+.input {
+  background-color: #212121;
+  max-width: 190px;
+  height: 40px;
+  padding: 10px;
+  /* text-align: center; */
+  border: 2px solid white;
+  border-radius: 5px;
+  /* box-shadow: 3px 3px 2px rgb(249, 255, 85); */
+}
+
+.input:focus {
+  color: rgb(255, 60, 0);
+  background-color: #212121;
+  outline-color: rgb(255, 60, 0);
+  box-shadow: -3px -3px 15px rgb(255, 60, 0);
+  transition: .1s;
+  transition-property: box-shadow;
+}
 /*estilos de las cartas de presentacion*/
 .card {
     position: relative;
