--- a/pages/deportes/Voley/home_voley.css
+++ b/pages/deportes/Voley/home_voley.css
@@ -21,6 +21,13 @@ h1{
     font-size: 30px;
 }
 
+.titulo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
 body{
     background-image: url(./imagenes/fondo\ voley.jpg.jfif);
     background-size: cover;
