--- a/pages/deportes/futbol/home_futbol.css
+++ b/pages/deportes/futbol/home_futbol.css
@@ -11,11 +11,14 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-
  }
-h1{
-  font-size: 50px;
-}
+
+ .logo {
+  height: 100px;
+  width: 230px;
+  display: flex;
+  justify-content: center;
+ }
 
  /*estilos de los botones */
 .botonera{
@@ -77,7 +80,8 @@ h1{
 
   .carousel-container {
     max-width: 3000px;
-    margin: 50px;
+    margin-bottom: 30px;
+    margin-top: 150px;
     position: relative;
     overflow: hidden;
   }
@@ -130,7 +134,7 @@ h1{
     right: 0;
     bottom: 0;
     left: 380px;
-    margin-top: 280px;
+    margin-top: 230px;
     margin-left: 200px;
     overflow: hidden;
   }
@@ -170,14 +174,14 @@ h1{
 
 }
 
-.principal-1>img {
+.principal-1 img {
   width: 250px;
   height: 250px;
   background-color:rgba(112, 128, 144, 0.113);
   border-radius: 80px;
 }
 
-.principal-1>img:hover {
+.principal-1 img:hover {
   filter: saturate(500%);
 }  
   
@@ -259,7 +263,7 @@ th {
 }
 
 .noticia img {
-  width: 50%;
+  width: 30%;
 }
 
 td img {
