--- a/pages/deportes/Voley/home_voley.css
+++ b/pages/deportes/Voley/home_voley.css
@@ -15,6 +15,62 @@ header {
     /*justify-content: center; /* Distribuye elementos horizontalmente */
     /*align-items: center; /* Centra elementos verticalmente */
     /*text-align: center;*/
+} 
+
+header{
+    background-color: #321e78ab;
+    color: #fff;
+    text-align: center;
+    padding: 10px 0;
+}
+
+nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: auto;
+    margin: 0 auto;
+    padding: 0 20px;
+}
+
+.logo_voley > img{
+    width: 80px;
+    height: 80px;
+    border-radius: 30px;
+}
+
+.botonera a{
+    text-decoration: none;
+    color: azure;
+    margin: 0 15px;
+    font-weight: bold;
+    font-size: 30px;
+}
+
+.logo_titulo > img{
+    margin-left: auto;
+    width: 200px;
+    height: 80px;
+    border-radius: 20px;
+}
+
+.boton_animado{
+    position: relative;
+    display: inline-block;
+    margin: 5px;
+    padding: 12px 15px;
+    border: none;
+    text-shadow: 2px 2px 3px black;
+    font-size: 30px;
+    background-color: inherit;
+    border-radius: 100px;
+    font-weight: 600;
+    color: aquamarine;
+    box-shadow: 0 0 0 #0051ffff;
+    cursor: pointer;
+    overflow: hidden;
+    transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
+    
 }
 
 /*body{
