se agrega el boton top

--- a/pages/biblioteca_videos/home_videos.css
+++ b/pages/biblioteca_videos/home_videos.css
@@ -51,6 +51,9 @@
     height: 150px;
     opacity: 1;
   }
+  /*estilos de los carruzeles de videos y fotos*/
+
+
   /* estilos de las frases que cambian*/
   .cardcambiante {
     font-size: 17px;
