--- a/pages/deportes/f1/home_f1.css
+++ b/pages/deportes/f1/home_f1.css
@@ -5,6 +5,7 @@
     padding-top: 20px; /* Espacio superior para separar de la parte superior de la página */
 }
 .animated-button {
+    margin-left: 5px;
     position: relative;
     display: inline-block;
     padding: 12px 24px;
@@ -59,7 +60,7 @@
     font-size: 17px;
     font-weight: 400;
     line-height: 20px;
-    color: #666;
+    color: #ffffff;
   }
   
   .card p.small {
@@ -76,7 +77,7 @@
     overflow: hidden;
     top: 0;
     right: 0;
-    background-color: #00838d;
+    background-color: #fe0101;
     border-radius: 0 4px 0 32px;
   }
   
@@ -88,10 +89,11 @@
   }
   
   .card1 {
+    color: #ccc;
     display: block;
     position: relative;
     max-width: 262px;
-    background-color: #f2f8f9;
+    background-color: #00000050;
     border-radius: 4px;
     padding: 32px 24px;
     margin: 12px;
@@ -106,7 +108,7 @@
     z-index: -1;
     top: -16px;
     right: -16px;
-    background: #00838d;
+    background: #ff0101;
     height: 32px;
     width: 32px;
     border-radius: 32px;
