--- a/pages/biblioteca_videos/home_videos.css
+++ b/pages/biblioteca_videos/home_videos.css
@@ -788,8 +788,8 @@ encima */
     height: 100%;
     width: 100%;
     border-radius: .5rem;
-    background: linear-gradient(180deg, rgba(8, 77, 126, 0) 0%, rgba(8, 77, 126, 0.42) 100%),rgba(47,255,255,.24);
-    box-shadow: inset 0 0 12px rgba(151,200,255,.44);
+    background: linear-gradient(180deg, rgb(8, 77, 126) 0%, rgb(8, 77, 126) 100%),rgb(47, 255, 255);
+    box-shadow: inset 0 0 12px rgb(24, 128, 247);
     z-index: -1;
   }
   
