cambios en stats

--- a/pages/deportes/Voley/home_voley.css
+++ b/pages/deportes/Voley/home_voley.css
@@ -1,6 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap'); /*font-family: 'Bebas Neue', sans-serif;*/
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap'); /*esta no */
+
+
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap'); /*font-family: 'Josefin Sans', sans-serif;*/
+
+
+@import url('https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap'); /*font-family: 'Rubik Mono One', sans-serif;*/
+
+
+
+
+
 *{
     margin: 0;
     padding: 0;
@@ -77,68 +88,7 @@ nav{
     transform: scale(1.1);
 }
 
-.estadisticas_nations_league{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 1rem;
-}
 
-.estadisticas{
-    border-radius: 1rem;
-    box-shadow: 0 0 3rem -1rem rgba(0, 0, 0, 0.25);
-    padding-block: 1rem;
-    text-transform: uppercase;
-    position: relative;
-    isolation: isolate;
-    overflow: hidden;
-}
-
-.estadistica_back{
-    position: absolute;
-    top:1rem;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: -1;
-}
-
-.estadistica_back img{
-    opacity: 0.9;
-}
-.jugador{
-    padding: 1rem;
-    display: flex;
-    justify-content: center;
-    overflow: hidden;
-}
-
-.jugador img{
-    width: 100%;
-    max-width: 17rem;
-    border-radius: 20px;
-}
-
-.titulo_info{
-    font-size: 35px;
-    padding: 0;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
-
-.jugador_info{
-    display: flex;
-    flex-direction: column;
-    gap: .5rem;
-    padding-inline: 1rem;
-    align-items: center;
-    text-align: center;
-    color: #fff;
-    font-size: 17px;
-}
-
-.divisiones{
-    color: #fff;
-    font-size: 48px;
-    font-family: 'Roboto Condensed', sans-serif;
-}
 
 .tabla_potencias{
     display: flex;
@@ -174,7 +124,7 @@ nav{
     background-color: #212c6bab;
   }
 
-.contenedor{
+.contenedor_vnl{
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -198,6 +148,69 @@ nav{
     margin: 0 20px;
     font-size: 32px;
     color: #FFF;
+}
+
+.estadisticas_nations_league{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
+}
+
+.estadisticas{
+    border-radius: 1rem;
+    box-shadow: 0 0 3rem -1rem rgba(0, 0, 0, 0.25);
+    padding-block: 1rem;
+    text-transform: uppercase;
+    position: relative;
+    isolation: isolate;
+    overflow: hidden;
+}
+
+.estadistica_back{
+    position: absolute;
+    top:1rem;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: -1;
+}
+
+.estadistica_back img{
+    opacity: 0.9;
+}
+.jugador{
+    padding: 1rem;
+    display: flex;
+    justify-content: center;
+    overflow: hidden;
+}
+
+.jugador img{
+    width: auto;
+    height: 250px;
+    border-radius: 20px;
+}
+
+.titulo_info{
+    font-size: 35px;
+    padding: 0;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.jugador_info{
+    display: flex;
+    flex-direction: column;
+    gap: .5rem;
+    padding-inline: 1rem;
+    align-items: center;
+    text-align: center;
+    color: #fff;
+    font-size: 17px;
+}
+
+.divisiones{
+    color: #fff;
+    font-size: 48px;
+    font-family: 'Roboto Condensed', sans-serif;
 }
 
 .noticias{
