--- a/pages/deportes/Voley/home_voley.css
+++ b/pages/deportes/Voley/home_voley.css
@@ -2,9 +2,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap'); /*esta no */
 
-
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap'); /*font-family: 'Josefin Sans', sans-serif;*/
-
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap'); /*font-family: 'fontJosefin Sans', sans-serif;*/
 
 @import url('https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap'); /*font-family: 'Rubik Mono One', sans-serif;*/
 
@@ -152,7 +150,7 @@ nav{
 
 .estadisticas_nations_league{
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     gap: 1rem;
 }
 
@@ -193,7 +191,7 @@ nav{
 .titulo_info{
     font-size: 35px;
     padding: 0;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'fontJosefin Sans', sans-serif;
 }
 
 .jugador_info{
