--- a/pages/deportes/futbol/home_futbol.css
+++ b/pages/deportes/futbol/home_futbol.css
@@ -98,8 +98,8 @@ nav {
   }
   
   .carousel-slide img {
-    width: 100%;
-    max-height: 50px;
+    width: auto;
+    max-height: 250px;
     object-fit:cover;
     transition: transform 0.6s ease;
   }
@@ -135,9 +135,8 @@ nav {
     line-height: 40px;
     text-shadow: 5px 5px 5px black;
     position: absolute;
-    left: 380px;
     margin-top: 50px;
-    margin-left: 200px;
+    margin-left: 250px;
     overflow: hidden;
   }
   
