--- a/pages/deportes/futbol/copa_libertadores/copa_libertadores.css
+++ b/pages/deportes/futbol/copa_libertadores/copa_libertadores.css
@@ -8,15 +8,15 @@
 
 
 body{
-    background-image: url('../images/home_fondo_messi.jpg');
+    background-image: url('../images/fondo_libertadores.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
    }
 
-   /* Estilo para el encabezado y la barra de navegación */
-header {
-    background-color: #000000d0; /* Fondo oscuro para el encabezado */
+  /* Estilo para el encabezado y la barra de navegación */
+  header {
+    background-color: #252424d0; /* Fondo oscuro para el encabezado */
     color: #fff; /* Texto en color blanco */
     text-align: center; /* Centrar el contenido del encabezado */
     padding: 10px 0; /* Espacio interno en la parte superior e inferior */
@@ -27,7 +27,7 @@ nav {
     display: flex; /* Mostrar elementos en una línea */
     justify-content: space-between; /* Distribuir los elementos de izquierda a derecha */
     align-items: center; /* Centrar verticalmente los elementos */
-    max-width: 1200px; /* Ancho máximo de la barra de navegación */
+    max-width: auto; /* Ancho máximo de la barra de navegación */
     margin: 0 auto; /* Centrar la barra de navegación en la página */
     padding: 0 20px; /* Espacio interno en los lados izquierdo y derecho */
 }
@@ -42,7 +42,7 @@ nav {
 .enlaces a {
     text-decoration: none; /* Quitar subrayado de los enlaces */
     color: #fff; /* Texto en color blanco */
-    margin: 0 20px; /* Espacio entre los enlaces */
+    margin: 0 15px; /* Espacio entre los enlaces */
     font-weight: bold; /* Texto en negrita */
     font-size: 30px;
 }
@@ -51,37 +51,36 @@ nav {
 .ingreso a {
     text-decoration: none; /* Quitar subrayado de los enlaces */
     color: #fff; /* Texto en color blanco */
-    margin-left: 20px; /* Espacio entre los enlaces de ingreso */
+    margin-left:auto; /* Espacio entre los enlaces de ingreso */
     font-weight: bold; /* Texto en negrita */
+    font-size: 20px;
 }
 
 
+ /*estilos de los botones del nav */
 
+ .animated-button {
+  position: relative;
+  display: inline-block;
+  margin: 5px;
+  padding: 12px 15px;
+  border: none;
+  text-shadow: 2px 2px 3px black;
+  font-size: 30px;
+  background-color: inherit;
+  border-radius: 100px;
+  font-weight: 600;
+  color: rgb(253, 253, 253);
+  box-shadow: 0 0 0 2px #0051ffff;
+  cursor: pointer;
+  overflow: hidden;
+  transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.animated-button:hover {
+  box-shadow: 0 0 0 10px #2195f360;
+  color: #ffffff;
+}
 
 
 
