--- a/pages/cartas_de_presentacion.css
+++ b/pages/cartas_de_presentacion.css
@@ -1,8 +1,10 @@
 .cartaspresentacion{
     text-align: center; 
     padding-top: 20px;
-    margin-top: 20px;  
+    margin-top: 20px; 
+    display: inline-block;
 }
+/*estilos de las cartas de presentacion*/
 .card {
     position: relative;
     display: inline-block;
@@ -129,7 +131,7 @@
   .content .btn:active {
     box-shadow: none;
   }
-  
+  /*estos son los estilos de la carte de los mensajes cambiantes*/
   .cardcambiante {
     font-size: 17px;
     font-weight: 400;
