--- a/pages/biblioteca_videos/home_videos.css
+++ b/pages/biblioteca_videos/home_videos.css
@@ -511,8 +511,8 @@ encima */
   }
 
   .card {
-    width: 1220px;
-    height: 254px;
+    width: 100%;
+    height: 354px;
     border-radius: 4px;
     background: #212121;
     display: flex;
@@ -766,7 +766,7 @@ encima */
     display: flex;
   }
   .buttonmas {
-    width: 1200px;
+    width: 100%;
     margin-top: 15px;
     padding: 1rem 2rem;
     border-radius: .5rem;
